Gestion de NRCs y Horarios

--- a/src/app/universidad/view/espaciosfisicos/ubicacion/ubicacion.component.html
+++ b/src/app/universidad/view/espaciosfisicos/ubicacion/ubicacion.component.html
@@ -1,9 +1,39 @@
 <div class="ui-g ui-fluid">
 
-
-  <div class="ui-g-12 ui-lg-6">
-
+  <div class="ui-g-7" >
     <div class="card card-w-title">
+      <h1>Administración de Espacios Físicos</h1>
+      <p-treeTable [value]="ubicacionTree" selectionMode="single" dataKey="descripcion">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Campus Disponibles</th>
+            
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
+          <tr>
+
+            <td>
+              <tr>
+                <td>
+                    <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
+
+                    <a  (click)="editarRegistro(rowData)"> {{rowData.descripcion}}</a>
+                   
+                </td>
+              </tr>
+                
+            </td>
+            
+          </tr>
+        </ng-template>
+      </p-treeTable>
+    </div>
+  </div>
+
+  <div class="ui-g-12 ui-lg-5" [hidden]='!edit' >
+
+    <div class="card card-w-title" [hidden]='edit'>
       <h1>Tipo de ubicación</h1>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-4">
@@ -31,20 +61,18 @@
     <div class="card card-w-title">
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-12">
-            <div class="ui-g-12 ui-md-10">
-          <h1>Descripción</h1>
-          <input type="text" pInputText placeholder="Descripción" [(ngModel)]="data.descripcion">
-        </div>
+          <div class="ui-g-12 ui-md-10">
+            <h1>Espacio Físico</h1>
+            <input type="text" pInputText placeholder="Descripción" [(ngModel)]="data.descripcion">
+          </div>
         </div>
         <div class="ui-g-12 ui-md-6">
-          <button pButton type="button" label="Guardar"  class="ui-button-info ui-button-rounded ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" (click)="guardarRegistro()"></button>
+          <button pButton type="button" label="Guardar" class="ui-button-info ui-button-rounded ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+            (click)="guardarRegistro()"></button>
         </div>
       </div>
 
     </div>
 
   </div>
-
-
-
 </div>
