--- a/src/app/universidad/view/espaciosfisicos/franja/franja.component.html
+++ b/src/app/universidad/view/espaciosfisicos/franja/franja.component.html
@@ -1,28 +1,40 @@
 <p>
-  franja works!
+    franja works!
 </p>
 <div class="card card-w-title">
-  <h1>Franjas Horarias</h1>
-  <p-table [columns]="cols" [value]="franjas" selectionMode="single" dataKey="vin" [style]="{'margin-bottom':'20px'}" [(selection)]="franjaSeleccionada"
-      [responsive]="true">
-      <ng-template pTemplate="caption">
-          Franjas
-      </ng-template>
-      <ng-template pTemplate="header" let-columns>
-          <tr>
-              <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                  {{col.header}}
-                  <p-sortIcon [field]="col.field"></p-sortIcon>
-              </th>
-          </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-rowData let-columns="columns">
-          <tr [pSelectableRow]="rowData">
-              <td *ngFor="let col of columns">
-                  <span class="ui-column-title">{{col.header}}</span>
-                  {{rowData[col.field]}}
-              </td>
-          </tr>
-      </ng-template>
-  </p-table>
+    <h1>Franjas Horarias</h1>
+    <p-table [columns]="cols" [value]="franjas" selectionMode="single" dataKey="codFranjaHoraria" [style]="{'margin-bottom':'20px'}" [(selection)]="franjaSeleccionada"
+        [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
+        <ng-template pTemplate="caption">
+            Franjas
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
+            <tr [pSelectableRow]="rowData">
+                <td>
+
+                    {{rowData.codFranjaHoraria}}
+                </td>
+                <td>
+
+                    {{rowData.inicioHora | date:'h:mma'}}
+                </td>
+                <td>
+
+                    {{rowData.finHora | date:'h:mma'}}
+                </td>
+                <td>
+
+                    {{rowData.dia}}
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
 </div>
