--- a/src/app/universidad/view/espaciosfisicos/horario/horario.component.html
+++ b/src/app/universidad/view/espaciosfisicos/horario/horario.component.html
@@ -1,3 +1,34 @@
-<p>
-  horario works!
-</p>
+<div class="ui-fluid">
+  <div class="ui-g">
+    <div class="card card-w-title">
+      <div class="ui-g">
+        <div class="ui-g-12 ui-md-6">
+          <h1>Seleccione un Periodo</h1>
+          <p-dropdown [options]="periodos" optionLabel="codigo" (onChange)="obtenerNRC($event)" [(ngModel)]="periodoSeleccionado" [autoWidth]="false"></p-dropdown>
+        </div>
+      </div>
+      <p-table [columns]="cols" [value]="nrcs" selectionMode="single" dataKey="codNrc" [style]="{'margin-bottom':'20px'}" [(selection)]="nrcSeleccionado"
+        [responsive]="true">
+        <ng-template pTemplate="caption">
+          NRC por periodo
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+          <tr>
+            <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+              {{col.header}}
+              <p-sortIcon [field]="col.field"></p-sortIcon>
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
+          <tr [pSelectableRow]="rowData">
+            <td *ngFor="let col of columns">
+              <span class="ui-column-title">{{col.header}}</span>
+              {{rowData[col.field]}}
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
+</div>
