--- a/src/app/universidad/view/espaciosfisicos/ubicacion/ubicacion.component.html
+++ b/src/app/universidad/view/espaciosfisicos/ubicacion/ubicacion.component.html
@@ -1,78 +1,91 @@
 <div class="ui-g ui-fluid">
-
-  <div class="ui-g-7" >
-    <div class="card card-w-title">
-      <h1>Administración de Espacios Físicos</h1>
-      <p-treeTable [value]="ubicacionTree" selectionMode="single" dataKey="descripcion">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Campus Disponibles</th>
-            
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
-          <tr>
-
-            <td>
-              <tr>
-                <td>
-                    <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
-
-                    <a  (click)="editarRegistro(rowData)"> {{rowData.descripcion}}</a>
-                   
-                </td>
-              </tr>
-                
-            </td>
-            
-          </tr>
-        </ng-template>
-      </p-treeTable>
-    </div>
-  </div>
-
-  <div class="ui-g-12 ui-lg-5" [hidden]='!edit' >
-
-    <div class="card card-w-title" [hidden]='edit'>
-      <h1>Tipo de ubicación</h1>
-      <div class="ui-g">
-        <div class="ui-g-12 ui-md-4">
-          <p-radioButton name="rg" value="1" label="Campus" [(ngModel)]="radioValue"></p-radioButton>
-        </div>
-        <div class="ui-g-12 ui-md-4">
-          <p-radioButton name="rg" value="2" label="Bloque" [(ngModel)]="radioValue"></p-radioButton>
-        </div>
-        <div class="ui-g-12 ui-md-4">
-          <p-radioButton name="rg" value="3" label="Aula" [(ngModel)]="radioValue"></p-radioButton>
-        </div>
-      </div>
-    </div>
-
-    <div class="card card-w-title" *ngIf="radioValue>1">
-      <h1>Campus</h1>
-      <p-dropdown [options]="campus" optionLabel="descripcion" (onChange)="filtrarCampus($event)" [(ngModel)]="campusSeleccionado"
-        [autoWidth]="false"></p-dropdown>
-    </div>
-
-    <div class="card card-w-title" *ngIf="radioValue==3">
-      <h1>Bloque</h1>
-      <p-dropdown [options]="bloques" optionLabel="descripcion" [(ngModel)]="bloqueSeleccionado" [autoWidth]="false"></p-dropdown>
-    </div>
-    <div class="card card-w-title">
+  <div class="ui-g-12">
+    <div class="ui-g-6">
       <div class="ui-g form-group">
-        <div class="ui-g-12 ui-md-12">
-          <div class="ui-g-12 ui-md-10">
-            <h1>Espacio Físico</h1>
-            <input type="text" pInputText placeholder="Descripción" [(ngModel)]="data.descripcion">
+        <div class="card card-w-title" *ngIf='!new'>
+          <h1>Administración de Espacios Físicos</h1>
+          <p-treeTable [value]="ubicacionTree" selectionMode="single" dataKey="descripcion">
+            <ng-template pTemplate="header">
+              <tr>
+                <th>Campus Disponibles</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
+              <tr>
+
+                <td>
+                  <tr>
+                    <td>
+                      <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
+
+                      <a (click)="editarRegistro(rowData)"> {{rowData.descripcion}}</a>
+
+                    </td>
+                  </tr>
+
+                </td>
+
+              </tr>
+            </ng-template>
+          </p-treeTable>
+          <div class="ui-g-4 ui-md-4">
+            <button pButton type="button" label="Nuevo" class="ui-button-info ui-button-rounded ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+              (click)="nuevoRegistro()"></button>
           </div>
         </div>
-        <div class="ui-g-12 ui-md-6">
-          <button pButton type="button" label="Guardar" class="ui-button-info ui-button-rounded ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
-            (click)="guardarRegistro()"></button>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui-g-12">
+    <div class="ui-g-6 ui-lg-6" *ngIf='new || edit'>
+
+      <div class="card card-w-title" [hidden]='edit'>
+        <h1>Tipo de ubicación</h1>
+        <div class="ui-g">
+          <div class="ui-g-12 ui-md-4">
+            <p-radioButton name="rg" value="1" label="Campus" [(ngModel)]="radioValue"></p-radioButton>
+          </div>
+          <div class="ui-g-12 ui-md-4">
+            <p-radioButton name="rg" value="2" label="Bloque" [(ngModel)]="radioValue"></p-radioButton>
+          </div>
+          <div class="ui-g-12 ui-md-4">
+            <p-radioButton name="rg" value="3" label="Aula" [(ngModel)]="radioValue"></p-radioButton>
+          </div>
         </div>
       </div>
 
-    </div>
+      <div class="card card-w-title" *ngIf="radioValue>1">
+        <h1>Campus</h1>
+        <p-dropdown [options]="campus" optionLabel="descripcion" (onChange)="filtrarCampus($event)" [(ngModel)]="campusSeleccionado"
+          [autoWidth]="false"></p-dropdown>
+      </div>
 
+      <div class="card card-w-title" *ngIf="radioValue==3">
+        <h1>Bloque</h1>
+        <p-dropdown [options]="bloques" optionLabel="descripcion" [(ngModel)]="bloqueSeleccionado" [autoWidth]="false"></p-dropdown>
+      </div>
+      <div class="card card-w-title">
+        <div class="ui-g form-group">
+          <div class="ui-g-12 ui-md-12">
+            <div class="ui-g-12 ui-md-12">
+              <h1>Espacio Físico</h1>
+              <input type="text" pInputText placeholder="Descripción" [(ngModel)]="data.descripcion">
+            </div>
+          </div>
+          <div class="ui-g-6 ui-md-6">
+            <button pButton type="button" label="Guardar" class="ui-button-success ui-button-rounded ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+              (click)="guardarRegistro()"></button>
+          </div>
+          <div class="ui-g-6 ui-md-6">
+            <button *ngIf='!new' pButton type="button" label="Eliminar" class="ui-button-warning ui-button-rounded ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+              (click)="eliminarRegistro()"></button>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
   </div>
+
 </div>
