--- a/src/app/universidad/view/registro/registro.component.html
+++ b/src/app/universidad/view/registro/registro.component.html
@@ -1,28 +1,135 @@
 <div class="ui-g ui-fluid">
-  <div class="ui-g-12 ui-lg-6">
-    <!-- Left Side -->
-    <div class="card card-w-title">
-      <h1>Registro de usuario</h1>
-      <div class="ui-g form-group">
-        <div class="ui-g-12 ui-md-12">
-          <p-dropdown [options]="roles" [(ngModel)]="rolSeleccionado" [autoWidth]="false"></p-dropdown>
-        </div>
-        <div class="ui-g-12 ui-md-12">
-          <input type="text" [(ngModel)]="data.cod_usuario" pInputText placeholder="Nombre de usuario" required>
-        </div>
-
-        <div class="ui-g-12 ui-md-12">
-          <label for="">Password</label>
-          <input pPassword [(ngModel)]="data.clave" type="password" required/>
-        </div>
-        <div class="card card-w-title ui-g-12 ui-md-12">
-          <h1>Activo</h1>
-          <p-inputSwitch [(ngModel)]="isActivo"></p-inputSwitch>
-        </div>
-        <div class="ui-g-12 ui-md-4">
-          <button pButton type="button" label="Guardar" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarUsuario()"></button>
-        </div>
-      </div>
+  <div class="card card-w-title">
+    <h1>Registro</h1>
+    <p-table [columns]="cols" [value]="personas" selectionMode="single" dataKey="CEDULA" [(selection)]="persona" [responsive]="true"
+      [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+      <ng-template pTemplate="caption">
+        Personas
+      </ng-template>
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+            {{col.header}}
+            <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+          <td *ngFor="let col of columns">
+            <span class="ui-column-title">{{col.header}}</span>
+            {{rowData[col.field]}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <div class="ui-g-12 ui-md-4">
+      <button pButton type="button" label="Nuevo" style="margin-bottom:10px" class="ui-button-raised" (click)="nuevo()"></button>
     </div>
   </div>
 </div>
+
+<p-dialog header="Detalles" [(visible)]="crud" [responsive]="true" showEffect="fade" [modal]="true" [width]="1000">
+  <div class="ui-g ui-fluid" *ngIf="data">
+
+
+      <div class="ui-g ui-fluid">
+
+          <div class="ui-g-12 ui-lg-6">
+            <!-- Left Side -->
+            <div class="card card-w-title">
+              <h1>Datos Personales</h1>
+              <div class="ui-g form-group">
+                <div class="ui-inputgroup ui-g-12 ui-md-6">
+                  <span class="ui-inputgroup-addon">
+                    <i class="fa fa-id-card"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="persona.CEDULA" pInputText placeholder="Cedula">
+                </div>
+        
+                <div class="ui-inputgroup ui-g-12 ui-md-6">
+                  <span class="ui-inputgroup-addon">
+                    <i class="fa fa-user"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="persona.NOMBRE" pInputText placeholder="Nombre">
+                </div>
+                <div class="ui-inputgroup ui-g-12 ui-md-6">
+                  <span class="ui-inputgroup-addon">
+                    <i class="fa fa-user"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="persona.APELLIDO" pInputText placeholder="Apellido">
+                </div>
+                <div class="ui-inputgroup ui-g-12 ui-md-6">
+                  <span class="ui-inputgroup-addon">
+                    <i class="fa fa-address-card"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="persona.DIRECCION" pInputText placeholder="Direccion">
+                </div>
+                <div class="ui-inputgroup ui-g-12 ui-md-6">
+                  <span class="ui-inputgroup-addon">
+                    <i class="fa fa-phone"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="persona.TELEFONO" pInputText placeholder="Telefono">
+                </div>
+                <div class="ui-inputgroup ui-g-12 ui-md-6">
+                  <span class="ui-inputgroup-addon">
+                    <i class="fa fa-envelope"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="persona.CORREO" pInputText placeholder="Email">
+                </div>
+        
+                <div class="ui-g-12 ui-md-6">
+                  <h3>Fecha nacimiento</h3>
+                  <p-calendar id="showIcon" [showIcon]="true"></p-calendar>
+        
+        
+                </div>
+        
+                <div class="ui-g-12 ui-md-6">
+                  <h3>Genero</h3>
+                  <p-selectButton [options]="generos" [(ngModel)]="persona.GENERO"></p-selectButton>
+                </div>
+        
+              </div>
+            </div>
+          </div>
+        
+        
+        
+          <div class="ui-g-12 ui-lg-6">
+            <!-- Left Side -->
+            <div class="card card-w-title">
+              <h1>Datos de usuario</h1>
+              <div class="ui-g form-group">
+                <div class="ui-g-12 ui-md-12">
+                  <p-dropdown [options]="roles" [(ngModel)]="rolSeleccionado" optionLabel="nombre" [autoWidth]="false"></p-dropdown>
+                </div>
+                <div class="ui-g-12 ui-md-12">
+                  <input type="text" [(ngModel)]="data.cod_usuario" pInputText placeholder="Nombre de usuario" required>
+                </div>
+        
+                <div class="ui-g-12 ui-md-12">
+                  <label for="">Password</label>
+                  <input pPassword [(ngModel)]="data.clave" type="password" required/>
+                </div>
+                <div class="card card-w-title ui-g-12 ui-md-12">
+                  <h1>Activo</h1>
+                  <p-inputSwitch [(ngModel)]="isActivo"></p-inputSwitch>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="fa fa-close" (click)="eliminar()" label="Cancelar"></button>
+      <button type="button" pButton icon="fa fa-check" (click)="guardarUsuario()" label="Guardar"></button>
+    </div>
+  </p-footer>
+</p-dialog>
+
+
+
+
+
