--- a/src/app/universidad/view/espaciosfisicos/ubicacion/ubicacion.component.html
+++ b/src/app/universidad/view/espaciosfisicos/ubicacion/ubicacion.component.html
@@ -65,11 +65,11 @@
                 </div>
 
                 <div class="ui-g-12 ui-md-12" *ngIf="radioValue==3">
-                  <h1>Bloque</h1>
+                  <h1>Asignatura</h1>
                   <p-dropdown [options]="bloques" optionLabel="descripcion" [(ngModel)]="bloqueSeleccionado" [autoWidth]="false"></p-dropdown>
                 </div>
                 <div class="ui-g-12 ui-md-12">
-                  <h1>Espacio Físico</h1>
+                  <h1>Detalle</h1>
                   <input type="text" pInputText placeholder="Descripción" [(ngModel)]="data.descripcion">
                 </div>
               </div>
