--- a/src/app/universidad/view/facturacion/cliente/cliente.component.html
+++ b/src/app/universidad/view/facturacion/cliente/cliente.component.html
@@ -1,62 +1,67 @@
 <div class="card card-w-title">
-  <h1>Lista de clientes</h1>
-  <p-table [columns]="cols" [value]="clientes" selectionMode="single" dataKey="num_documento" [style]="{'margin-bottom':'20px'}" [(selection)]="clienteSeleccionado" 
-      [responsive]="true">
-      <ng-template pTemplate="caption">
-          Clientes
-      </ng-template>
-      <ng-template pTemplate="header" let-columns>
-          <tr>
-              <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                  {{col.header}}
-                  <p-sortIcon [field]="col.field"></p-sortIcon>
-              </th>
-              <th></th>
-          </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-rowData let-columns="columns">
-          <tr [pSelectableRow]="rowData">
-              <td *ngFor="let col of columns">
-                  <span class="ui-column-title">{{col.header}}</span>
-                  {{rowData[col.field]}}
-              </td>
-              <td>
-                <button pButton icon="fa-edit" (click)="editarRegistro(rowData)"></button>
-                &nbsp;&nbsp;
-                <button pButton icon="fa-trash" (click)="eliminarRegistro(rowData)"></button>
-            </td>
-          </tr>
-      </ng-template>
-  </p-table>
-</div>
+    <h1>Lista de clientes</h1>
+    <div class="ui-g form-group">
 
-<div class="ui-g ui-fluid">
-  <div class="ui-g-12 ui-lg-6">
-    <!-- Left Side -->
-    <div class="card card-w-title">
-      <h1>Registro de clientes</h1>
-      <div class="ui-g form-group">
-        <div class="ui-g-12 ui-md-12">
-            <input type="text" [(ngModel)]="data.razon_social" pInputText placeholder="Razon Social" required>
-          </div>
-
-        <div class="ui-g-12 ui-md-12">
-          <input type="text" [(ngModel)]="data.num_documento" pInputText placeholder="Numero Documento" required>
-        </div>
-        <div class="ui-g-12 ui-md-12">
-            <input type="text" [(ngModel)]="data.direccion" pInputText placeholder="Direccion" required>
-        </div> 
-        <div class="ui-g-12 ui-md-12">
-          <input type="email" [(ngModel)]="data.correo" pInputText placeholder="Correo" required>
-        </div>
-
-        <div class="ui-g-12 ui-md-12">
-          <input type="text" [(ngModel)]="data.telefono" pInputText placeholder="Telefono" required>
-      </div>   
+        <p-table [columns]="cols" [value]="clientes" selectionMode="single" dataKey="num_documento" [style]="{'margin-bottom':'20px'}"
+            [(selection)]="data" [responsive]="true" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="10" [responsive]="true"
+            paginatorPosition="both">
+            <ng-template pTemplate="caption">
+                Clientes
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                        {{col.header}}
+                        <p-sortIcon [field]="col.field"></p-sortIcon>
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+                    <td *ngFor="let col of columns">
+                        <span class="ui-column-title">{{col.header}}</span>
+                        {{rowData[col.field]}}
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
         <div class="ui-g-12 ui-md-4">
-            <button pButton type="button" label="Guardar" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarCliente()"></button>
+            <button pButton type="button" label="Nuevo" style="margin-bottom:10px" class="ui-button-raised" (click)="nuevoRegistro()"></button>
         </div>
-      </div>
     </div>
-  </div>
 </div>
+
+<p-dialog header="Detalles" [(visible)]="crud" [responsive]="true" showEffect="fade" [modal]="true" [width]="1000">
+    <div class="ui-g ui-fluid" *ngIf="data">
+        <!-- Left Side -->
+        <div class="card card-w-title">
+            <h1>Registro de clientes</h1>
+            <div class="ui-g form-group">
+                <div class="ui-g-12 ui-md-12">
+                    <input type="text" [(ngModel)]="data.razon_social" pInputText placeholder="Razon Social" required>
+                </div>
+
+                <div class="ui-g-12 ui-md-12">
+                    <input type="text" [(ngModel)]="data.num_documento" pInputText placeholder="Numero Documento" required>
+                </div>
+                <div class="ui-g-12 ui-md-12">
+                    <input type="text" [(ngModel)]="data.direccion" pInputText placeholder="Direccion" required>
+                </div>
+                <div class="ui-g-12 ui-md-12">
+                    <input type="email" [(ngModel)]="data.correo" pInputText placeholder="Correo" required>
+                </div>
+
+                <div class="ui-g-12 ui-md-12">
+                    <input type="text" [(ngModel)]="data.telefono" pInputText placeholder="Telefono" required>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <p-footer>
+        <div class="ui-dialog-buttonpane ui-helper-clearfix">
+            <button type="button" pButton icon="fa fa-close" (click)="eliminarRegistro()" label="Eliminar"></button>
+            <button type="button" pButton icon="fa fa-check" (click)="guardarCliente()" label="Guardar"></button>
+        </div>
+    </p-footer>
+</p-dialog>
