--- a/src/app/virtual/view/foroAlumno/foroAlumno.component.html
+++ b/src/app/virtual/view/foroAlumno/foroAlumno.component.html
@@ -42,6 +42,9 @@
               <td>
                   {{rowData.nombrePersona}}
               </td>
+              <td>
+                  {{rowData.curso}}
+              </td>
               <td>  
                   {{rowData.texto}}
               </td>
