Seguridades FrontEnd AM

--- a/src/app/universidad/view/registro/registro.component.html
+++ b/src/app/universidad/view/registro/registro.component.html
@@ -110,7 +110,7 @@
         
                 <div class="ui-g-12 ui-md-12">
                   <label for="">Password</label>
-                  <input pPassword [(ngModel)]="data.clave" type="password" required/>
+                  <input pPassword [(ngModel)]="claveMD5" type="password" required/>
                 </div>
                 <div class="card card-w-title ui-g-12 ui-md-12">
                   <h1>Activo</h1>
