--- a/src/app/virtual/view/tarea/tarea.component.html
+++ b/src/app/virtual/view/tarea/tarea.component.html
@@ -1,3 +1,115 @@
-<p>
-  tarea works!
-</p>
+<div *ngIf="selectUsuario()">
+  <div class="ui-g ui-fluid">
+    <div class="ui-g-12 ui-lg-12">
+      <!-- Left Side -->
+      <div class="card card-w-title">
+        <h1>Publicar Tarea</h1>
+        <div class="ui-g form-group">
+          <div class="ui-g-12 ui-md-6">
+            <label> TEMA: </label>
+            <br>
+            <input type="text" [(ngModel)]="tarea.tema" pInputText placeholder="Tema" required>
+            <br><br>
+            <label> DESCRIPCIÓN: </label>
+            <textarea rows="4" cols="50" [(ngModel)]="tarea.descripcion" placeholder="Ingrese la descripción de la tarea" required>  </textarea>
+          </div>
+          <div class="ui-g-6 ui-md-4">
+            <button pButton type="button" label="Publicar Tarea" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarTarea()"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card card-w-title">
+  <h1>Tareas</h1>
+  <p-table [columns]="cols" [value]="tareas" selectionMode="single" dataKey="codigo" [style]="{'margin-bottom':'20px'}" [(selection)]="tareaSeleccionado"
+    [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
+    <ng-template pTemplate="caption">
+      Tareas
+    </ng-template>
+    <ng-template pTemplate="header" let-columns>
+      <tr>
+        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+          {{col.header}}
+          <p-sortIcon [field]="col.field"></p-sortIcon>
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+      <tr [pSelectableRow]="rowData">
+        <td>
+          {{rowData.codigo}}
+        </td>
+        <td>
+          {{rowData.curso }}
+        </td>
+        <td>
+          {{rowData.tema}}
+        </td>
+        <td>
+          {{rowData.descripcion }}
+        </td>
+        <td>
+          {{rowData.fechaInicio}}
+        </td>
+        <td>
+          {{rowData.fechaFin}}
+        </td>
+        <div *ngIf="selectUsuario()">
+          <td>
+            <button pButton icon="fa-edit" (click)="editarTarea(rowData)"></button>
+            &nbsp;&nbsp;
+            <button pButton icon="fa-trash" (click)="eliminarTarea(rowData)"></button>
+          </td>
+        </div>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+<div class="card card-w-title">
+    <h1>Tareas</h1>
+    <p-table [columns]="cols" [value]="tareas" selectionMode="single" dataKey="codigo" [style]="{'margin-bottom':'20px'}" [(selection)]="tareaSeleccionado"
+      [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
+      <ng-template pTemplate="caption">
+        Tareas
+      </ng-template>
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+            {{col.header}}
+            <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+          <td>
+            {{rowData.codigo}}
+          </td>
+          <td>
+            {{rowData.curso }}
+          </td>
+          <td>
+            {{rowData.tema}}
+          </td>
+          <td>
+            {{rowData.descripcion }}
+          </td>
+          <td>
+            {{rowData.fechaInicio}}
+          </td>
+          <td>
+            {{rowData.fechaFin}}
+          </td>
+          <div *ngIf="selectUsuario()">
+            <td>
+              <button pButton icon="fa-edit" (click)="editarTarea(rowData)"></button>
+              &nbsp;&nbsp;
+              <button pButton icon="fa-trash" (click)="eliminarTarea(rowData)"></button>
+            </td>
+          </div>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
