--- a/src/app/universidad/view/evaluacionDocente/pregunta/pregunta.component.html
+++ b/src/app/universidad/view/evaluacionDocente/pregunta/pregunta.component.html
@@ -12,9 +12,10 @@
             <tr>
                 <td>{{pregunta.codPregunta}}</td>
                 <td>{{pregunta.enunciado}}</td>
-                <td><p-rating [(ngModel)]="val"></p-rating></td>
+                <td><p-rating [(ngModel)]="val[pregunta.codPregunta]"></p-rating></td>
                 
             </tr>
         </ng-template>
     </p-table>
+    <p-button label="Guardar Respuestas" icon="fa fa-check" iconPos="right"></p-button>
 </p-panel>
