--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<p-growl [(value)]="login.msg"></p-growl>
+
 <div class="layout-wrapper" [ngClass]="{'layout-menu-horizontal': menuMode === 'horizontal',
                                         'layout-menu-overlay': menuMode === 'overlay',
                                         'layout-menu-static': menuMode === 'static',
