--- a/src/app/universidad/view/evaluacionDocente/pregunta/pregunta.component.html
+++ b/src/app/universidad/view/evaluacionDocente/pregunta/pregunta.component.html
@@ -1,5 +1,6 @@
+<p-growl [value]="msgs" sticky="sticky"></p-growl>
 <p-panel header="Cuestionario: {{cuestionario}}">
-    <p-table [value]="preguntas" autoLayout="true">
+    <p-table [value]="preguntas1" autoLayout="true">
         <ng-template pTemplate="header">
             <tr>
                 <th>Id</th>
@@ -10,12 +11,12 @@
         </ng-template>
         <ng-template pTemplate="body" let-pregunta>
             <tr>
-                <td>{{pregunta.codPregunta}}</td>
+                <td>{{pregunta.id}}</td>
                 <td>{{pregunta.enunciado}}</td>
-                <td><p-rating [(ngModel)]="val[pregunta.codPregunta]"></p-rating></td>
+                <td><p-rating [(ngModel)]="pregunta.valor" (onRate)="guardarValorPregunta($event)"></p-rating></td>
                 
             </tr>
         </ng-template>
     </p-table>
-    <p-button label="Guardar Respuestas" icon="fa fa-check" iconPos="right"></p-button>
+    <p-button label="Guardar Respuestas" icon="fa fa-check" iconPos="right" (onClick)="guardarCuestionario()"></p-button>
 </p-panel>
