--- a/src/app/virtual/view/foroAlumno/foroAlumno.component.html
+++ b/src/app/virtual/view/foroAlumno/foroAlumno.component.html
@@ -51,13 +51,13 @@
               <td>
                 {{rowData.fecha}}
               </td>
-            <div *ngIf="selectUsuario()">
+            <!-- <div *ngIf="selectUsuario()">
               <td>
                 <button pButton icon="fa-edit" (click)="editarForo(rowData)"></button>
                 &nbsp;&nbsp;
                 <button pButton icon="fa-trash" (click)="eliminarForo(rowData)"></button>
               </td>
-            </div>
+            </div> -->
           </tr>
       </ng-template>
   </p-table>
